:recycle: FIX: alterando evento com softdelete
